--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "currency-formatter": "^1.5.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-image-slider": "^2.0.3",
